fix: GC properties and entrypoint permissions